--- a/src/app/components/pages/home/service/service.component.html
+++ b/src/app/components/pages/home/service/service.component.html
@@ -3,7 +3,7 @@
         <!-- Section Title -->
         <div class="section-title text-center both-border mb-30">
             <span class="title-tag">Our Products</span>
-            <h2 class="title">We Provide The Most Exclusive <br> Products For Our Clients</h2>
+            <h3 class="title">Sourcing Made in USA Personal Protective Products & Sanitizing Solutions Will Protect The USA for Today And The Future</h3>
         </div>
         <!-- Services Boxes -->
         <div class="row service-boxes justify-content-center">
