--- a/src/app/components/pages/shop/content/content.component.html
+++ b/src/app/components/pages/shop/content/content.component.html
@@ -1,3 +1,8 @@
+<div class="postscript">
+    <p>
+        For Additional Details and Product RFQ simply click on the item and indicate the QTY your organization is requesting and a TruCleanz customer service team member will send a customized quote for your specific organization based on class of trade and estimated volume needed.
+    </p>
+</div>
 <section class="shop-page-wrap section-gap">
     <div class="container">
         <div class="row justify-content-center">
