--- a/src/app/components/shared/brands/brands.component.html
+++ b/src/app/components/shared/brands/brands.component.html
@@ -2,46 +2,40 @@
     <div class="wrapper">
     <div class="cp-brands-banner">
     <ul class="cp-brands-list">
-      <li class="cp-brand-item" id="mytee">
+      <li class="cp-brand-item" id="illumipure">
         <a class="cp-brand-link " href="/">
-          <img src="https://cdn.shopify.com/s/files/1/1352/8413/t/21/assets/pf-2ffe7a83-c652-4322-b24d-d9ba5c517aa2--mytee.png?35165" alt="mytee" title="Mytee">
+          <img src="https://s3-us-west-2.amazonaws.com/cbi-image-service-prd/modified/0b7db9e6-72c6-49c1-8b6f-bf7a8bc520db.png" alt="illumipure" title="Illumipure">
           </a>
       </li>
       
-      <li class="cp-brand-item" id="gtechniq">
+      <li class="cp-brand-item" id="eagle">
         <a class="cp-brand-link " href="/">
-          <img src="https://images.squarespace-cdn.com/content/v1/5bf9ab05506fbeeca9ea72ce/1547651432114-HMCL2HXUMTK8ZLRM0QJD/red+leters-PNG.png" alt="gtechniq" title="Gtechniq">
+          <img src="https://cdn.shopify.com/s/files/1/1249/3023/files/Eagle_Logo_no_box_-_RGB_ca19918b-8f56-4fc0-97ff-9dfee2fb64e7.png?v=1608665638" alt="Eagle" title="Eagle">
           </a>
       </li>
       
-      <li class="cp-brand-item" id="carpro">
+      <li class="cp-brand-item" id="trusafe">
         <a class="cp-brand-link " href="/">
-          <img src="https://cdn02.plentymarkets.com/zzgzvodn5a8r/frontend/carpro-auto-protect-shop.png" alt="carpro" title="Carpro">
+          <img src="assets/img/trusafe.JPG" alt="trusafe" title="TruSafe">
           </a>
       </li>
       
-      <li class="cp-brand-item" id="chemicalguys">
+      <li class="cp-brand-item" id="made for us">
         <a class="cp-brand-link " href="/">
-          <img src="https://www.aeainvestors.com/wp-content/uploads/chemical-guys-aea-logo.png" alt="chemical guys" title="Chemical Guys">
+          <img src="assets/img/forus.JPG" alt="madebyusmadeforus" title="Made by US Made for US">
           </a>
       </li>
       
-      <li class="cp-brand-item" id="bissell">
+      <li class="cp-brand-item" id="masc">
         <a class="cp-brand-link " href="/">
-          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4a/Bissell_logo.svg/1200px-Bissell_logo.svg.png" alt="bissell" title="Bissell">
+          <img src="https://cdn.shopify.com/s/files/1/0262/7026/9489/files/MASC-Underwear-Logo-Master-B_2932x.png?v=1625400348" alt="masc" title="Masc">
           </a>
       </li>
       
       
-      <li class="cp-brand-item" id="aero303">
+      <li class="cp-brand-item" id="centerforgreenschools">
         <a class="cp-brand-link " href="/">
-          <img src="https://www.goldeagle.com/wp-content/uploads/2017/10/303-brand-logo-353x200.png" alt="Aero 303" title="Aero 303">
-          </a>
-      </li>
-      
-      <li class="cp-brand-item" id="rupes">
-        <a class="cp-brand-link " href="/">
-          <img src="https://logodix.com/logo/1946030.png" alt="Rupes" title="Rupes">
+          <img src="https://www.centerforgreenschools.org/sites/default/files/cfgs-logo.png" alt="centerforgreenschools" title="Center for Green Schools">
           </a>
       </li>
     
