--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -71,7 +71,7 @@
                                             demo@example.com
                                         </a>
                                     </li>
-                                    <li> <i class="far fa-map-marker-alt"></i> Broklyn Street USA</li>
+                                    <li> <i class="far fa-map-marker-alt"></i> 122 SW Frank Phillips Blvd, Rm. 219 <br>Bartlesville, OK 74003</li>
                                 </ul>
                             </div>
                         </div>
