--- a/src/app/components/shared/header-one/header-one.component.html
+++ b/src/app/components/shared/header-one/header-one.component.html
@@ -46,7 +46,7 @@
                 <div class="navbar-extra d-lg-block d-flex align-items-center">
                     <!-- Navbtn -->
                     <div class="navbar-btn nav-push-item">
-                        <a class="main-btn main-btn-3" routerLink="/contact">Get In Touch</a>
+                        <a class="btn" routerLink="/contact"><i class="fa fa-shopping-cart"></i></a>
                     </div>
                     <!-- Navbar Toggler -->
                     <div class="navbar-toggler" [ngClass]="navmethod ? '' : 'active'" (click)="toggleNav()">
