--- a/src/app/components/pages/portfolio/content/content.component.html
+++ b/src/app/components/pages/portfolio/content/content.component.html
@@ -12,7 +12,7 @@
         <div class="row project-boxes project-isotope mt-60 justify-content-center">
             <div class="isotope-item col-lg-4 col-sm-6" *ngFor="let item of filteredItems">
                 <div class="project-box hover-style">
-                    <div class="project-thumb">
+                    <div class="project-thumb" a routerLink="/portfolio-details/{{item.id}}">
                         <div class="thumb bg-img-c" [style.background-image]="'url('+item.gridimg+')'"></div>
                     </div>
                     <div class="project-desc text-center">
