--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -249,6 +249,7 @@ ol {
 
 p {
   margin: 0px;
+  padding-bottom: 15px;
 }
 
 a {
@@ -262,7 +263,7 @@ a, a:hover {
 
 /*=======  Common Classes  =======*/
 .main-btn {
-  line-height: 70px;
+  line-height: 55px;
   font-size: 18px;
   font-weight: 700;
   border-radius: 35px;
@@ -335,6 +336,8 @@ a, a:hover {
 .main-btn.main-btn-3 {
   background-color: #14212b;
   color: #fff;
+  padding: 0 55px;
+  height: 55px;
 }
 
 .main-btn.main-btn-3::after {
@@ -391,7 +394,7 @@ a, a:hover {
 
 .section-title .title-tag::after {
   left: auto;
-  right: 0;
+  right: 0; 
 }
 
 .section-title.left-border .title-tag {
@@ -410,8 +413,22 @@ a, a:hover {
   display: block;
 }
 
+.btn {
+  font-size: 20px;
+}
+
+.postscript {
+  width: 100%;
+  text-align: center;
+  background-color: #ffff0045;
+}
+
+.postscript p {
+  font-weight: 600;
+}
+
 .section-title .title {
-  font-size: 50px;
+  font-size: 35px;
   line-height: 1.1;
 }
 
@@ -848,6 +865,7 @@ header .header-nav .nav-container .menu-items ul li a {
   position: relative;
   font-weight: 700;
   font-family: "Source Sans Pro", sans-serif;
+  font-size: 20px;
 }
 
 @media (max-width: 1599px) {
@@ -1252,6 +1270,12 @@ header.sticky-header.header-two.sticky-on .header-nav {
 header .header-topbar .header-topbar-inner {
   border-bottom: 2px solid #526676;
   padding: 20px 0;
+}
+
+.contact-info {
+  background-color: #fff;
+  padding-top: 3rem;
+  padding-bottom: 5rem;
 }
 
 @media (max-width: 767px) {
@@ -5401,11 +5425,11 @@ header.header-three .header-nav::before {
     height: 320px;
   }
 }
-
 .project-boxes .project-box .project-thumb {
   height: 100%;
   width: 100%;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .project-boxes .project-box .project-thumb .thumb {
@@ -6582,7 +6606,6 @@ header.header-three .header-nav::before {
 }
 
 .contact-section.contact-page .contact-form {
-  padding: 70px 0;
   margin-bottom: -170px;
   position: relative;
 }
@@ -6599,6 +6622,7 @@ header.header-three .header-nav::before {
 .cartbox {
   border-bottom: 1px solid lightgray;
   padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 @media (max-width: 575px) {
@@ -6652,12 +6676,12 @@ header.header-three .header-nav::before {
 }
 
 .contact-section.contact-page .contact-form button {
-  padding: 8px 30px;
+  padding: 8px 55px;
   background-color: #02376b;
   border: none;
   font-weight: 700;
   color: #fff;
-  font-size: 14px;
+  font-size: 18px;
   font-family: "Source Sans Pro", sans-serif;
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
@@ -6687,7 +6711,13 @@ header.header-three .header-nav::before {
   width: 100%;
   height: 100%;
 }
-
+.nocart {
+  text-align: center;
+}
+.catalog {
+  padding-bottom: 25px;
+  color: #02376b;
+}
 .cartlabel {
   margin: 30px;
 }
@@ -8085,7 +8115,7 @@ footer.grey-bg-footer .footer-copyright .back-to-top:hover {
 
 .text-center {
   text-align: center;
-  padding-top: 20px;
+  padding: 30px 0 40px 0;
 }
 
 
@@ -8203,13 +8233,23 @@ footer.grey-bg-footer .footer-copyright .back-to-top:hover {
   padding: 0 16px;
 }
 
-
+.addtoquote {
+  position: absolute;
+  padding-top: 10px;
+  width: 130px;
+  text-align: center;
+  color: #02376b;
+}
   
   
 
 /*Brands  */
 
-
+#brands {
+  padding-top: 30px;
+  display: flex;
+  text-align: center;
+}
 
 
 .cp-brands-list {
@@ -8262,7 +8302,6 @@ footer.grey-bg-footer .footer-copyright .back-to-top:hover {
 @media only screen and (min-width: 1280px) {
   .cp-brands-list {
   justify-content: space-between;
-  padding: 16px;
 }
 
 .cp-brand-item {
